--- a/CarBookingService/CarBookingService/Properties/launchSettings.json
+++ b/CarBookingService/CarBookingService/Properties/launchSettings.json
@@ -25,6 +25,12 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:8300"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/cars",
+      "publishAllPorts": true
     }
   }
 }
