--- a/CarBookingService/CarBookingService/appsettings.json
+++ b/CarBookingService/CarBookingService/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\dev;Database=CarBooking;Trusted_Connection=True"
+    "DefaultConnection": "Server=localhost;Database=CarBooking;User Id=sa;Password=yourStrong(!)Password;"
   }
 }
